--- a/react-client/public/index.html
+++ b/react-client/public/index.html
@@ -9,6 +9,17 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700"
       rel="stylesheet"
     />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="https://image.ibb.co/fOur3b/favicon.png"
+    />
+    <meta name="theme-color" content="#3a9fff" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -30,9 +41,12 @@
     -->
     <title>React App</title>
   </head>
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
