--- a/react-client/public/index.html
+++ b/react-client/public/index.html
@@ -9,10 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Roboto:400,500,700"
       rel="stylesheet"
     />
-
+    <!-- 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/popper.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
     <link
       rel="shortcut icon"
